--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,5 +1,19 @@
-@import './layout/header.scss';
-@import './layout/footer.scss';
-
-
-@import './pages/index.scss';
+@import "./utils/variables";
+@import "./utils/mixins";
+@import "./utils/helpers.scss";
+@import "./base/reset.scss";
+@import "./base/base.scss";
+@import "./components/pagination.scss";
+@import "./components/title.scss";
+@import "./components/page-bg.scss";
+@import "./base/typography";
+@import "./layout/grid.scss";
+@import "./layout/header.scss";
+@import "./layout/footer.scss";
+@import "./layout/blog-nav.scss";
+@import "./pages/index.scss";
+@import "./pages/product.scss";
+@import "./pages/location.scss";
+@import "./pages/qa.scss";
+@import "./pages/blog.scss";
+@import "./pages/blog-detail.scss";
