--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,4 +1,15 @@
-<h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>
+<header class="bg-primary">
+  <div class="container header">
+    <h1>
+      <a href="index.html" title="眼鏡官網" class="header-logo">眼鏡形象官網</a>
+    </h1>
+    <nav>
+      <ul class="header-menu">
+        <li><a href="product-optical.html">系列鏡框</a></li>
+        <li><a href="location.html">門市據點</a></li>
+        <li><a href="blog.html">部落格</a></li>
+        <li><a href="qa.html">常見問題</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
