--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,53 @@
-<footer class="footer">我是 footer</footer>
+<footer class="bg-primary">
+  <div class="container">
+    <div class="footer-info">
+      <div>
+        <ul class="footer-menu-list">
+          <li><a href="index.html">首頁</a></li>
+          <li><a href="product-optical.html">系列鏡框</a></li>
+          <li><a href="location.html">門市據點</a></li>
+          <li><a href="blog.html">部落格</a></li>
+          <li><a href="qa.html">常見問題</a></li>
+        </ul>
+        <ul class="footer-contact-list">
+          <li>
+            <a href="tel:+88680000000">
+              <span class="material-symbols-outlined"> call </span>
+              0800-000-000
+            </a>
+          </li>
+          <li>
+            <a href="mailto:glasses@business.com">
+              <span class="material-symbols-outlined"> mail </span>
+              glasses@business.com
+            </a>
+          </li>
+        </ul>
+      </div>
+      <ul class="footer-social-list">
+        <li>
+          <a href="#">
+            <img src="../assets/images/ic-social-fb.png" alt="fb" />
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="../assets/images/ic_social_ig.png" alt="ig" />
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="../assets/images/ic_social_line.png" alt="line" />
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer-copyright">
+      <p>Copyright © 2020 Glasses.All rights reserved.</p>
+      <ul class="footer-policy-list">
+        <li><a href="#">隱私權政策</a></li>
+        <li><a href="#">服務條款</a></li>
+      </ul>
+    </div>
+  </div>
+</footer>
