--- a/assets/scss/pages/_blog.scss
+++ b/assets/scss/pages/_blog.scss
@@ -53,8 +53,8 @@
     font-size: 16px;
     opacity: 0.7;
   }
-  a:visited {
-    color: inherit;
+  a {
+    color: black;
   }
   p {
     font-size: 20px;
